[gd_scene load_steps=33 format=2]

[ext_resource path="res://GameContent/Player.gd" type="Script" id=1]
[ext_resource path="res://GameContent/Player_Visuals.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/GUI/flag_arrow.png" type="Texture" id=3]
[ext_resource path="res://GameContent/Center_Pivot.gd" type="Script" id=4]
[ext_resource path="res://GameContent/Camera.gd" type="Script" id=5]
[ext_resource path="res://GameContent/Player_Area2D.gd" type="Script" id=6]
[ext_resource path="res://Assets/Sound/Local_Death.wav" type="AudioStream" id=7]
[ext_resource path="res://Assets/Sound/Kill.wav" type="AudioStream" id=8]
[ext_resource path="res://Assets/Sound/Laser_Charge.wav" type="AudioStream" id=9]
[ext_resource path="res://Assets/Sound/Laser_Fire.wav" type="AudioStream" id=10]
[ext_resource path="res://Assets/Sound/Flag_Pickup.wav" type="AudioStream" id=11]
[ext_resource path="res://Assets/Sound/Flag_Drop.wav" type="AudioStream" id=12]
[ext_resource path="res://Assets/Sound/Teleport.wav" type="AudioStream" id=13]
[ext_resource path="res://fonts/Pixel_Chat.tres" type="DynamicFont" id=14]
[ext_resource path="res://Assets/Particles/fire_particles_ability_shaped.tscn" type="PackedScene" id=15]
[ext_resource path="res://Assets/Player/Death Animations/Bat animation.png" type="Texture" id=16]
[ext_resource path="res://GameContent/Ability_Node.gd" type="Script" id=17]
[ext_resource path="res://GameContent/Utility_Node.gd" type="Script" id=18]
[ext_resource path="res://GameContent/Weapon_Node.gd" type="Script" id=19]
[ext_resource path="res://GameContent/PowerupGUIParticles.tscn" type="PackedScene" id=20]
[ext_resource path="res://Assets/Sound/Powerup.wav" type="AudioStream" id=21]
[ext_resource path="res://Assets/Shaders/Vignette_Red.shader" type="Shader" id=22]
[ext_resource path="res://Assets/Shaders/Vignette_Blue.shader" type="Shader" id=23]
[ext_resource path="res://GameContent/Home_Pointer.gd" type="Script" id=25]

[sub_resource type="CircleShape2D" id=1]
radius = 5.0

[sub_resource type="Curve" id=2]
max_value = 630.66
_data = [ Vector2( 0.791667, 4.71545 ), 0.0, 0.0, 0, 0, Vector2( 1, 334.25 ), 3776.08, 0.0, 0, 0 ]

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 22 )

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 23 )

[sub_resource type="CapsuleShape2D" id=5]
radius = 8.67661
height = 13.2677

[sub_resource type="CapsuleShape2D" id=6]
radius = 2.37617
height = 5.37553

[sub_resource type="CanvasItemMaterial" id=7]
particles_animation = true
particles_anim_h_frames = 1
particles_anim_v_frames = 2
particles_anim_loop = true

[sub_resource type="Curve" id=8]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.712177, 0.715909 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[node name="Player" type="KinematicBody2D"]
collision_mask = 524322
script = ExtResource( 1 )

[node name="PowerupParticles" parent="." instance=ExtResource( 20 )]
position = Vector2( 0, 23.404 )
emitting = false
amount = 3
lifetime = 0.5
emission_rect_extents = Vector2( 25, 10 )
initial_velocity = 120.0

[node name="Fire_Particles" parent="." instance=ExtResource( 15 )]
position = Vector2( 0, 9.276 )
emitting = false
amount = 1000
lifetime = 1.2
speed_scale = 2.0
emission_rect_extents = Vector2( 11, 10 )
spread = 10.0

[node name="Weapon_Node" type="Node2D" parent="."]
z_index = 4
script = ExtResource( 19 )

[node name="CollisionTester" type="KinematicBody2D" parent="Weapon_Node"]
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="Weapon_Node/CollisionTester"]
shape = SubResource( 1 )

[node name="Laser_Timer" type="Timer" parent="Weapon_Node"]
wait_time = 0.4
one_shot = true

[node name="Cooldown_Timer" type="Timer" parent="Weapon_Node"]
wait_time = 0.5
one_shot = true

[node name="Laser_Charge_Audio" type="AudioStreamPlayer" parent="Weapon_Node"]
stream = ExtResource( 9 )
pitch_scale = 1.25

[node name="Laser_Fire_Audio" type="AudioStreamPlayer" parent="Weapon_Node"]
stream = ExtResource( 10 )

[node name="Bullet_Starts" type="Node" parent="Weapon_Node"]

[node name="0" type="Node2D" parent="Weapon_Node/Bullet_Starts"]
position = Vector2( -0.7976, -11.8209 )

[node name="1" type="Node2D" parent="Weapon_Node/Bullet_Starts"]
position = Vector2( 11.471, -5.11357 )

[node name="2" type="Node2D" parent="Weapon_Node/Bullet_Starts"]
position = Vector2( 12.5101, 4.76815 )

[node name="3" type="Node2D" parent="Weapon_Node/Bullet_Starts"]
position = Vector2( 8.99377, 11.1588 )

[node name="4" type="Node2D" parent="Weapon_Node/Bullet_Starts"]
position = Vector2( -0.64249, 15.8412 )

[node name="5" type="Node2D" parent="Weapon_Node/Bullet_Starts"]
position = Vector2( -9.87443, 11.4386 )

[node name="6" type="Node2D" parent="Weapon_Node/Bullet_Starts"]
position = Vector2( -14.2827, 4.68982 )

[node name="7" type="Node2D" parent="Weapon_Node/Bullet_Starts"]
position = Vector2( -12.8271, -5.55873 )

[node name="Laser_Starts" type="Node" parent="Weapon_Node"]

[node name="0" type="Node2D" parent="Weapon_Node/Laser_Starts"]
position = Vector2( -0.074, -15.546 )

[node name="1" type="Node2D" parent="Weapon_Node/Laser_Starts"]
position = Vector2( 16.9402, -10.0641 )

[node name="2" type="Node2D" parent="Weapon_Node/Laser_Starts"]
position = Vector2( 18.684, 5.59578 )

[node name="3" type="Node2D" parent="Weapon_Node/Laser_Starts"]
position = Vector2( 13.0276, 18.1864 )

[node name="4" type="Node2D" parent="Weapon_Node/Laser_Starts"]
position = Vector2( -0.481946, 22.4571 )

[node name="5" type="Node2D" parent="Weapon_Node/Laser_Starts"]
position = Vector2( -14.0888, 18.4933 )

[node name="6" type="Node2D" parent="Weapon_Node/Laser_Starts"]
position = Vector2( -19.8163, 5.90677 )

[node name="7" type="Node2D" parent="Weapon_Node/Laser_Starts"]
position = Vector2( -17.6768, -9.34735 )

[node name="Laser_Particles" type="CPUParticles2D" parent="Weapon_Node"]
modulate = Color( 1, 1, 1, 0.509804 )
position = Vector2( 18.2876, 5.24351 )
scale = Vector2( 2, 2 )
z_index = -1
emitting = false
amount = 20
lifetime = 0.4
one_shot = true
emission_shape = 1
emission_sphere_radius = 8.67
gravity = Vector2( 0.368, 2.016 )
radial_accel = -100.0
radial_accel_random = 0.1
damping = 2.96
damping_curve = SubResource( 2 )
color = Color( 0.109804, 0.760784, 0.0745098, 1 )

[node name="Utility_Node" type="Node2D" parent="."]
script = ExtResource( 18 )

[node name="Cooldown_Timer" type="Timer" parent="Utility_Node"]
one_shot = true

[node name="Ability_Node" type="Node2D" parent="."]
script = ExtResource( 17 )

[node name="Cooldown_Timer" type="Timer" parent="Ability_Node"]
one_shot = true

[node name="Camo_Timer" type="Timer" parent="Ability_Node"]
wait_time = 3.0
one_shot = true

[node name="Ult_Charge_Timer" type="Timer" parent="Ability_Node"]
wait_time = 2.0
autostart = true

[node name="Ult_Timer" type="Timer" parent="Ability_Node"]
wait_time = 8.0
one_shot = true

[node name="Player_Visuals" parent="." instance=ExtResource( 2 )]

[node name="Center_Pivot" type="Position2D" parent="."]
script = ExtResource( 4 )

[node name="Camera" type="Camera2D" parent="Center_Pivot"]
zoom = Vector2( 0.5, 0.5 )
smoothing_enabled = true
smoothing_speed = 10.0
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0
editor_draw_drag_margin = true
script = ExtResource( 5 )

[node name="Shake_Timer" type="Timer" parent="Center_Pivot/Camera"]
one_shot = true

[node name="Smooth_Timer" type="Timer" parent="Center_Pivot/Camera"]
wait_time = 2.0
one_shot = true

[node name="Canvas_Layer" type="CanvasLayer" parent="Center_Pivot/Camera"]

[node name="Vignette_Red" type="ColorRect" parent="Center_Pivot/Camera/Canvas_Layer"]
visible = false
material = SubResource( 3 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 0.00392157, 0.00392157, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Vignette_Blue" type="ColorRect" parent="Center_Pivot/Camera/Canvas_Layer"]
visible = false
material = SubResource( 4 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 0.00392157, 0.00392157, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D" type="Area2D" parent="." groups=[
"Player_Bodies",
]]
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0.0646133, 3.80024 )
shape = SubResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Flag_Holder" type="Node2D" parent="."]

[node name="Respawn_Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Invincibility_Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Teleport_Timer" type="Timer" parent="."]
one_shot = true

[node name="Powerup_Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.0144213, 13.2055 )
rotation = 1.5708
shape = SubResource( 6 )

[node name="Death_Audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = 5.0

[node name="Killed_Audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = 10.0

[node name="Flag_Pickup_Audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="Flag_Drop_Audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )

[node name="Teleport_Audio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 13 )
pitch_scale = 0.5
attenuation = 0.233258

[node name="Powerup_Audio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 21 )
volume_db = 24.0

[node name="Name_Parent" type="Node2D" parent="."]
z_index = 2000
z_as_relative = false

[node name="Label_Name" type="RichTextLabel" parent="Name_Parent"]
anchor_right = 1.0
margin_left = -199.854
margin_top = -26.8247
margin_right = 200.146
margin_bottom = -4.82474
rect_clip_content = false
custom_fonts/normal_font = ExtResource( 14 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center][color=blue]Guest7768"
text = "Guest7768"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Teleport_Invincibility_Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Home_Pointer_Pivot" type="Node2D" parent="."]
script = ExtResource( 25 )

[node name="Home_Pointer" type="Sprite" parent="Home_Pointer_Pivot"]
visible = false
position = Vector2( 1, 0 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
material = SubResource( 7 )
emitting = false
one_shot = true
explosiveness = 0.2
texture = ExtResource( 16 )
direction = Vector2( 0, -1 )
gravity = Vector2( 0, 0 )
initial_velocity = 30.0
scale_amount_curve = SubResource( 8 )
anim_speed = 8.0
